# apis/entity/index.ts
@@ -6,8 +6,8 @@ export { LlmModel, CreateLlmModelRequest, UpdateLlmModelRequest } from './llm-mo
 export { SystemConfig, UpdateSystemConfigsRequest } from './system-config.entity';
 export { PublishingPlatform } from './publishing-platform.entity';
 export { Project, CreateProjectRequest, UpdateProjectRequest } from './project.entity';
-export { Article, ArticleStatus, ScheduleType, ArticleVersion, CreateArticleRequest, UpdateArticleRequest, ReviewArticleRequest } from './article.entity';
+export { Article, ArticleStatus, ArticleVersion, CreateArticleRequest, UpdateArticleRequest, ReviewArticleRequest } from './article.entity';
 export { KnowledgeKeyword, KeywordExpandedWord, KnowledgePortrait, KnowledgeImage, KnowledgeDocument, CreateKeywordRequest, UpdateKeywordRequest, CreatePortraitRequest, UpdatePortraitRequest, CreateImageRequest, UpdateImageRequest, CreateDocumentRequest, UpdateDocumentRequest, MinedKeyword } from './knowledge.entity';
 export { KnowledgeBase, KnowledgeBaseDetail, KnowledgeScope, CreateKnowledgeBaseRequest, UpdateKnowledgeBaseRequest } from './knowledge-base.entity';
 export { Todo, TodoLog, CreateTodoRequest, UpdateTodoRequest, TransferTodoRequest } from './todo.entity';
-export { PublishingScheduleListParams, PublishingScheduleItem, PublishingScheduleUpdateResult } from './publishing-schedule.entity';
+export { PublishingSchedule, PublishingScheduleStatus, ScheduleType, CreatePublishingScheduleRequest, UpdatePublishingScheduleRequest, PublishingScheduleListParams, PublishingScheduleItem, PublishingScheduleUpdateResult } from './publishing-schedule.entity';
